# autoclean-eeg2source

./: .gitignore  README.md  TUTORIAL.md  autoclean_config.json  autoclean_standalone.py  comprehensive_cli_test.py  create_test_data.py  index.html  pyproject.toml  test_complete_cli.py  test_parallel.py  test_performance.py  test_processor.py  test_progress.py  test_real_processing.py  test_regression.py  test_standalone_basic.py  test_timing.py  test_with_synthetic.py  validation_test.py
benchmark_output/benchmark_results/: processor_comparison_20250520_220556.json  sequential_test_sequential_20250520_220556.json
src/autoclean_eeg2source/: __init__.py  cli.py
src/autoclean_eeg2source/cli/: __init__.py  enhanced_cli.py
src/autoclean_eeg2source/cli_enhancements/: __init__.py  ascii_art.py  help_system.py  progress.py  system_info.py  visual.py  wizard.py
src/autoclean_eeg2source/core/: converter.py  (+1 more)
test_standalone_output/: 140108_C5D1BL_P300_comp_metadata.json
test_standalone_output_v2/: 140108_C5D1BL_P300_comp_metadata.json
test_standalone_output_v3/: 140108_C5D1BL_P300_comp_metadata.json
test_standalone_output_v4/: 140108_C5D1BL_P300_comp_metadata.json
test_standalone_output_v5/: 140108_C5D1BL_P300_comp_metadata.json
test_standalone_output_v6/: 140108_C5D1BL_P300_comp_metadata.json
test_standalone_output_v7/: 140108_C5D1BL_P300_comp_metadata.json
test_standalone_output_v8/: 140108_C5D1BL_P300_comp_metadata.json
test_standalone_output_v9/: 140108_C5D1BL_P300_comp_metadata.json
tests/: conftest.py
working_assets/: epochs_to_source_set_v2.py
(+1 files in other folders)
