[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autoclean-eeg2source"
version = "0.1.0"
description = "EEG source localization with DK atlas regions"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "AutoClean Team", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "mne==1.6.0",
    "numpy>=1.20,<2.0",
    "pandas>2.0",
    "loguru>=0.7",
    "psutil>=5.9",
    "nibabel>=3.0",
    "eeglabio>=0.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "build",
    "twine",
]

[project.scripts]
autoclean-eeg2source = "autoclean_eeg2source.cli:main"

[tool.setuptools.packages.find]
where = ["src"]


[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true